# backend.ai-cli

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg
.github/workflows/: default.yml  timeline-check.yml
changes/: 2.feature  3.feature  3.misc.md  5.misc.md
requirements/: dev.txt
src/ai/backend/cli/: __main__.py  extensions.py  interaction.py  loader.py  main.py
tests/: test_loader.py  test_main.py
