[metadata]
name = backend.ai-cli
version = attr: ai.backend.cli.__version__
description = Backend.AI Command Line Interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = joongi@lablup.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/backend.ai-cli
    Tracker = https://github.com/lablup/backend.ai/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools>=41.2.0
install_requires =
    Click>=7.0
    importlib_metadata; python_version<"3.8"

zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.6
    twine>=1.14.0
test =
    pytest>=5.3.0
    pytest-cov
    pytest-mock
    mypy>=0.760
    flake8>=3.7.9
    codecov
dev =
    pytest-sugar>=0.9.2
ci =


[options.packages.find]
where = src
include = ai.backend.*

[options.package_data]
ai.backend.cli = py.typed

[options.entry_points]
console_scripts =
    backend.ai = ai.backend.cli.__main__:main

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
namespace_packages = true
